<resources>
    <string name="app_name">Judo Ippon</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="learn">Learn</string>
    <string name="scoreboard">Scoreboard</string>
    <string name="s">S</string>
    <string name="w">W</string>
    <string name="title_activity_profile_settings">Profile Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">My Name</string>

    <string name="pref_title_belts">Belt</string>
    <string-array name="pref_belt_list_titles">
        <item>White</item>
        <item>Yellow</item>
        <item>Orange</item>
        <item>Green</item>
        <item>Blue</item>
        <item>Brown</item>
        <item>Black</item>
    </string-array>
    <string-array name="pref_belt_list_values">
        <item>belt_white</item>
        <item>belt_yellow</item>
        <item>belt_orange</item>
        <item>belt_green</item>
        <item>belt_blue</item>
        <item>belt_brown</item>
        <item>belt_black</item>
    </string-array>

    <string name="pref_title_countries">Country</string>
    <string-array name="pref_country_list_titles">
        <item>JPN</item>
        <item>RUS</item>
        <item>USA</item>
        <item>BUL</item>
        <item>GBR</item>
        <item>GEO</item>
        <item>MGL</item>
        <item>CHN</item>
        <item>AUS</item>
        <item>GER</item>
        <item>FRA</item>
        <item>BLR</item>
        <item>SPA</item>
        <item>ARG</item>
        <item>BRA</item>
        <item>KOR</item>
        <item>EGY</item>
        <item>UKR</item>
        <item>MEX</item>
        <item>POR</item>
        <item>SRB</item>
        <item>SWE</item>
        <item>ROU</item>
        <item>HUN</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_header_scoreboard">Scoreboard</string>

    <string name="pref_default_email_address">myemail@mail.com</string>
    <string name="pref_title_email_address">Email</string>
    <string name="pref_email_address"></string>
    <string name="pref_white_player_name">White Player Name</string>
    <string name="pref_blue_player_name">Blue Player Name</string>
    <string name="pref_title_countries_white">Country White</string>
    <string name="pref_title_countries_blue">Country Blue</string>
    <string name="pref_display_name">pref_display_name</string>
</resources>
