<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_white_player_name"
        android:inputType="textCapWords"
        android:key="pref_white_player_name"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_white_player_name" />

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_blue_player_name"
        android:inputType="textCapWords"
        android:key="pref_blue_player_name"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_blue_player_name" />

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:defaultValue="-1"
        android:entries="@array/pref_country_list_titles"
        android:entryValues="@array/pref_country_list_titles"
        android:key="white_country_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_countries_white" />

    <ListPreference
        android:defaultValue="-1"
        android:entries="@array/pref_country_list_titles"
        android:entryValues="@array/pref_country_list_titles"
        android:key="blue_country_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_countries_blue" />

</PreferenceScreen>
